ingress/oauth-proxy.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx-prod
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    path: "/"
spec:
  rules:
  - host: oauth2.jamiechapmanbrn.com
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: "/oauth2"
  tls:
  - hosts:
    - oauth2.jamiechapmanbrn.com
    secretName: oauth2.jamiechapmanbrn.com.tls.secret
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: oauth
  name: oauth2-proxy
  namespace: ingress-nginx
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth
  name: oauth
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: oauth
  template:
    metadata:
      labels:
        k8s-app: oauth
    spec:
      volumes:
      - configMap:
          defaultMode: 420
          name: config-oauth2
        name: config
      containers:
      - name: oauth
        image: quay.io/pusher/oauth2_proxy:v3.2.0
        args:
        - "--http-address=0.0.0.0:4180"
        - "--upstream=file:///dev/null"
        - "--config=/etc/oauth2_proxy/oauth2_proxy.cfg"
        - "--authenticated-emails-file=/etc/oauth2_proxy/auth_emails.txt"
        livenessProbe:
          httpGet:
            path: "/ping"
            port: http
        readinessProbe:
          httpGet:
            path: "/ping"
            port: http
        volumeMounts:
        - mountPath: "/etc/oauth2_proxy"
          name: config
        ports:
        - containerPort: 4180
          protocol: TCP
          name: http
